--- a/jira-app/src/App.css
+++ b/jira-app/src/App.css
@@ -33,3 +33,43 @@
   padding: 10px;
   background-color: blueviolet;
 }
+
+.task-show {
+  border: 1px solid green;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 350px;
+  padding: 20px;
+}
+
+.task-delete {
+  padding: 5px;
+  font-size: 15px;
+  width: 60px;
+  border: none;
+  border-radius: 25px;
+  background-color: red;
+  color: white;
+  margin-right: 10px;
+}
+
+.task-title{
+  margin-bottom: 5px;
+}
+
+.task-update {
+  padding: 5px;
+  font-size: 15px;
+  width: 80px;
+  border: none;
+  border-radius: 25px;
+  background-color: blue;
+  color: white;
+  margin-right: 10px;
+}
+
+.tasks {
+  display: flex;
+}
