--- a/jira-app/src/App.css
+++ b/jira-app/src/App.css
@@ -4,44 +4,65 @@
   align-items: center;
 }
 
-.forms {
-  display: flex;
-  flex-direction: column;
-}
-
 .task-create {
   width: 450px;
 }
 
-.task-baslik {
-  margin: 10px 0;
+.task-form {
+  display: flex;
+  flex-direction: column;
 }
 
-.box {
-  border: 1px solid;
-  border-radius: 10px;
-  margin: 10px 0;
+.task-label {
+  margin: 10px 0px;
+}
+
+.task-input {
   padding: 10px;
+  border: 1px solid black;
+  border-radius: 10px;
 }
 
-.btn {
-  margin: 10px 0;
-  border-radius: 10px;
+.task-button {
+  border: 1px solid green;
+  margin: 10px 0px;
+  padding: 10px;
+  background-color: green;
   color: white;
-  font-size: 17px;
-  border: purple;
-  padding: 10px;
-  background-color: blueviolet;
+  border-radius: 10px;
+  font-size: 20px;
+}
+
+.task-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .task-show {
   border: 1px solid green;
-  border-radius: 20px;
+  border-radius: 30px;
+  width: 350px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 350px;
-  padding: 20px;
+  margin: 20px;
+}
+
+.task-title {
+  margin-bottom: 5px;
+}
+
+.task-edit {
+  padding: 5px;
+  font-size: 15px;
+  width: 100px;
+  border: none;
+  border-radius: 30px;
+  background-color: blue;
+  color: white;
+  margin-right: 10px;
 }
 
 .task-delete {
@@ -49,27 +70,8 @@
   font-size: 15px;
   width: 60px;
   border: none;
-  border-radius: 25px;
+  border-radius: 30px;
   background-color: red;
   color: white;
   margin-right: 10px;
-}
-
-.task-title{
-  margin-bottom: 5px;
-}
-
-.task-update {
-  padding: 5px;
-  font-size: 15px;
-  width: 80px;
-  border: none;
-  border-radius: 25px;
-  background-color: blue;
-  color: white;
-  margin-right: 10px;
-}
-
-.tasks {
-  display: flex;
 }
